--- a/pages/cut_down/cut_down.wxml
+++ b/pages/cut_down/cut_down.wxml
@@ -3,7 +3,7 @@
 <!-- bargainDetails -->
 <view class="container">
   <view class="" wx:if="{{sharetime == 3}}">
-    <wux-media wux-class-title="media-title" thumb="{{bargainDetails[bargainDetails.length-1].headimgurl}}" thumb-style="border-radius: 50%" title="{{bargainDetails[bargainDetails.length-1].nickName}}" label="我发现了一本好书，一起来砍价0元拿"></wux-media>
+    <wux-media wux-class-title="media-title" thumb="{{bargainDetails[bargainDetails.length-1].headimgurl}}" thumb-style="border-radius: 50%" title="{{bargainDetails[bargainDetails.length-1].nickName}}" label="我发现了一本好书，一起来助力0元拿"></wux-media>
   </view>
   <view class="pro-info-wrap">
     <view class="pro-info">
@@ -21,13 +21,13 @@
             </view>
             <text>书签</text>
           </view>
-          <view>
+          <view style='white-space: nowrap'>
             <!-- {{orderInfo.expiryTime}} -->
-            <text class="time-num">{{hours}}</text>
-            <text class="time-num">{{min}}</text>
-            <text class="time-num">{{sec}}</text>
-            <text class="" wx:if="{{timeOver}}" style="color:#BBBBBB">砍价已结束</text>
-            <text class="" wx:else style="color:#BBBBBB">后结束砍价</text>
+            <text class="time-num">{{timer.hours}}</text>
+            <text class="time-num">{{timer.min}}</text>
+            <text class="time-num">{{timer.sec}}</text>
+            <text class="" wx:if="{{timer.overdue}}" style="color:#BBBBBB">助力已结束</text>
+            <text class="" wx:else style="color:#BBBBBB">后结束助力</text>
           </view>
         </view>
       </view>
@@ -65,32 +65,32 @@
       </block> -->
       <block wx:if="{{bargainDetails.length >= 1 && !timeOver && percent < 100 && !inviterUserId || inviterUserId == userInfo.userId}}">
         <view class="a" style="text-align: center">
-          预计再邀请{{bargain.estimatedNumber}}人帮忙砍价, 即可免费领取
+          预计再邀请{{bargain.estimatedNumber}}人帮忙助力, 即可免费领取
         </view>
         <view class="btn active main-btn share-btn">
           邀请好友
           <button catch:tap="preventDefault" open-type="share" data-sharetime="3" id="share-cut"></button>
         </view>
         <view class="btn border main-btn" bindtap="postOrderSubmit">
-          {{bargain.gold - bargain.haveBargainGold}}书签立刻解锁
+          {{bargain.gold - bargain.haveBargainGold}}书签立刻领取
         </view>
       </block>
       <!-- sharetime == 3 -->
       <block wx:elif="{{sharetime == 3 && inviterUserId != userInfo.userId && !timeOver && percent < 100}}">
         <view class="a" style="text-align: center">
-          预计还需{{bargain.estimatedNumber}}人帮忙砍价, 即可免费解锁
+          预计还需{{bargain.estimatedNumber}}人帮忙助力, 即可免费领取
         </view>
-        <view class="btn active main-btn share-btn" catchtap="helpCut">帮忙砍价</view>
+        <view class="btn active main-btn share-btn" catchtap="helpCut">帮忙助力</view>
       </block>
       <block wx:elif="{{timeOver && percent < 100}}">
         <view class="a" style="text-align: center">
-          当前可使用{{bargain.gold - bargain.haveBargainGold}}书签解锁
+          当前可使用{{bargain.gold - bargain.haveBargainGold}}书签领取
         </view>
-        <view class="btn active main-btn share-btn" bindtap="postOrderSubmit">立刻解锁</view>
+        <view class="btn active main-btn share-btn" bindtap="postOrderSubmit">立刻领取</view>
       </block>
       <block wx:elif="{{percent >= 100}}">
-        <view class="a" style="text-align: center">恭喜您, 砍价成功</view>
-        <view class="btn active main-btn share-btn" bindtap="postOrderSubmit">0书签解锁</view>
+        <view class="a" style="text-align: center">恭喜您, 助力成功</view>
+        <view class="btn active main-btn share-btn" bindtap="postOrderSubmit">0书签领取</view>
       </block>
     </view>
   </view>
@@ -98,7 +98,7 @@
     <view class="record-title" wx:if="{{bargain.estimatedNumber>0}}">
       预计{{bargain.estimatedNumber}}人助力, 即可0书签换书
     </view>
-    <view class="record-title" wx:else>砍价记录</view>
+    <view class="record-title" wx:else>助力记录</view>
     <view class="record-list">
       <view class="" style="text-align: center;padding: 20rpx 0" wx:if="{{!bargainDetails.length}}">
         暂无记录
@@ -120,13 +120,13 @@
     <button class='btn active' open-type="share" data-sharetime="3" id="share-again">
       继续分享,还可砍一刀
     </button>
-    <button class='btn border' bindtap="onClosefirstPopupModal">放弃分享砍价</button>
+    <button class='btn border' bindtap="onClosefirstPopupModal">放弃分享助力</button>
   </view>
 </popupPro>
 <!-- 再次分享AgainPopup -->
 <popupPro modal-hidden="{{AgainPopup}}" modal-title="再次分享成功" tips="多砍了{{cutGold}}标签" modal-type="1">
   <view class="modal-content" slot hover-class="none" hover-stop-propagation="false">
-    <button class='btn active' open-type="share" data-sharetime="3" id="share-cut">邀请好友帮忙砍价</button>
+    <button class='btn active' open-type="share" data-sharetime="3" id="share-cut">邀请好友帮忙助力</button>
     <button class='btn border' bindtap="onCloseAgainPopupModal">我知道了</button>
   </view>
 </popupPro>
