--- a/pages/cut_down/cut_down.wxss
+++ b/pages/cut_down/cut_down.wxss
@@ -1,247 +1,254 @@
-    /* pages/cut_down/cut_down.wxss */
-    
-    .container {
-        padding-bottom: 30rpx;
-    }
-    
-    .pro-info-wrap {
-        width: 100%;
-        box-sizing: border-box;
-        /* display: flex;
+/* pages/cut_down/cut_down.wxss */
+
+.container {
+  padding-bottom: 30rpx;
+}
+
+.pro-info-wrap {
+  width: 100%;
+  box-sizing: border-box;
+  /* display: flex;
     flex-direction: row;
     align-items: center;
     justify-content: center; */
-    }
-    
-    .pro-info {
-        margin: 0 30rpx;
-        display: flex;
-        flex-direction: row;
-        padding: 40rpx 0;
-        position: relative;
-        justify-content: space-between;
-    }
-    
-    .img {
-        width: 180rpx;
-        height: 250rpx;
-        background: #C0C2D6;
-        border-radius: 20rpx;
-        /* position: absolute;
+}
+
+.pro-info {
+  margin: 0 30rpx;
+  display: flex;
+  flex-direction: row;
+  padding: 40rpx 0;
+  position: relative;
+  justify-content: space-between;
+}
+
+.img {
+  width: 180rpx;
+  height: 250rpx;
+  background: #c0c2d6;
+  border-radius: 10rpx;
+  /* position: absolute;
         left: 0; */
-    }
-    
-    .info-body {
-        padding: 0 20rpx;
-        box-sizing: border-box;
-        display: flex;
-        flex-direction: column;
-        align-items: flex-start;
-        justify-content: space-between;
-        width: 500rpx;
-    }
-    
-    .info-body .name {
-        font-weight: bold;
-        font-size: 32rpx;
-        margin-bottom: 10rpx;
-    }
-    
-    .info-body .desc {
-        margin-bottom: 10rpx;
-        color: #C0C2D6;
-        line-height: 1.2;
-    }
-    
-    .count-time {}
-    
-    .time-num {
-        border-radius: 10rpx;
-        background: #CF3B32;
-        color: #fff;
-        text-align: center;
-        margin: 0 10rpx;
-        padding: 0 2rpx;
-        position: relative;
-        width: 36rpx;
-        height: 36rpx;
-    }
-    
-    .time-num::before {
-        content: ":";
-        color: #000;
-        position: absolute;
-        left: -10rpx;
-    }
-    
-    .time-num:first-child::before {
-        color: red;
-        content: " ";
-    }
-    
-    .operation-wrap {
-        margin: 60rpx 0;
-    }
-    
-    .slider {
-        margin: 0 90rpx;
-    }
-    
-    .slider-text {
-        text-align: center;
-        height: 60rpx;
-    }
-    
-    .btn-cointainer {
-        margin: 60rpx 0;
-        position: relative;
-    }
-    
-    .openbtn {
-        width: 100%;
-        height: 100%;
-        position: absolute;
-        left: 0;
-        top: 0;
-        background: transparent;
-        z-index: 1;
-    }
-    
-    .main-btn {
-        width: 500rpx;
-        margin: 30rpx auto;
-        border-radius: 50rpx;
-        position: relative;
-    }
-    
-    .share-btn>button {
-        width: 100%;
-        height: 100%;
-        position: absolute;
-        left: 0;
-        top: 0;
-    }
-    /* 砍价记录 */
-    
-    .record-wrap {
-        margin: 0 30rpx;
-        background: #F6F6F6;
-        border-radius: 20rpx;
-    }
-    
-    .record-title {
-        height: 100rpx;
-        line-height: 100rpx;
-        text-align: center;
-        border-bottom: 1rpx solid #E1E1E1;
-        color: #000;
-        font-size: 30rpx;
-        font-weight: bold;
-    }
-    /* 媒体对象自定义内容 */
-    
-    .media-title {
-        color: #C0C0C0;
-        font-size: 30rpx !important;
-        font-weight: normal !important;
-    }
-    
-    .headimg {
-        width: 100rpx !important;
-        height: 100rpx !important;
-    }
-    
-    .center-right {
-        position: absolute;
-        right: 0;
-        top: 50%;
-        transform: translateY(-50%);
-    }
-    
-    .label {
-        padding-right: 30rpx;
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        /* color: #232E78; */
-        color: #000;
-        font-size: 30rpx;
-    }
-    
-    .time {
-        /* color: rgb(136, 136, 136); */
-        color: #AFB4CD;
-        font-size: 24rpx;
-        margin-top: 10rpx;
-    }
-    /* 列表媒体对象end */
-    /* 弹窗按钮 */
-    
-    .modal-content .btn {
-        width: 384rpx;
-        height: 80rpx;
-        line-height: 80rpx;
-        color: #fff;
-        font-size: 30rpx;
-        border-radius: 50rpx;
-        margin: 30rpx auto;
-        text-align: center;
-    }
-    
-    .modal-content .btn.active {
-        /* background: linear-gradient(to right, #e2c597, #cf9f73); */
-        /* background: #FFAA0F; */
-        background: linear-gradient(to right, #9034F0, #3772FB);
-        color: #fff;
-        border: none;
-    }
-    
-    .modal-content .btn.border {
-        /* border: 1rpx solid #FFAA0F;
+  box-shadow: 0rpx 0rpx 20rpx 0 rgba(96, 96, 96, 0.2);
+  
+}
+
+.info-body {
+  padding: 0 20rpx;
+  box-sizing: border-box;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  justify-content: space-between;
+  /* width: 500rpx; */
+  width: 540rpx;
+}
+
+.info-body .name {
+  font-weight: bold;
+  font-size: 32rpx;
+  margin-bottom: 10rpx;
+}
+
+.info-body .desc {
+  margin-bottom: 10rpx;
+  color: #c0c2d6;
+  line-height: 1.2;
+}
+
+.count-time {
+}
+
+.time-num {
+  border-radius: 10rpx;
+  background: #cf3b32;
+  color: #fff;
+  text-align: center;
+  margin: 0 10rpx;
+  padding: 0 2rpx;
+  position: relative;
+  width: 36rpx;
+  height: 36rpx;
+}
+
+.time-num::before {
+  content: ":";
+  color: #000;
+  position: absolute;
+  left: -10rpx;
+}
+
+.time-num:first-child::before {
+  color: red;
+  content: " ";
+}
+
+.operation-wrap {
+  margin: 60rpx 0;
+}
+
+.slider {
+  margin: 0 90rpx;
+}
+
+.slider-text {
+  text-align: center;
+  height: 60rpx;
+}
+
+.btn-cointainer {
+  margin: 60rpx 0;
+  position: relative;
+}
+
+.openbtn {
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  left: 0;
+  top: 0;
+  background: transparent;
+  z-index: 1;
+}
+
+.main-btn {
+  width: 500rpx;
+  margin: 30rpx auto;
+  border-radius: 50rpx;
+  position: relative;
+}
+
+.share-btn>button {
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  left: 0;
+  top: 0;
+}
+
+/* 砍价记录 */
+
+.record-wrap {
+  margin: 0 30rpx;
+  background: #f6f6f6;
+  border-radius: 20rpx;
+}
+
+.record-title {
+  height: 100rpx;
+  line-height: 100rpx;
+  text-align: center;
+  border-bottom: 1rpx solid #e1e1e1;
+  color: #000;
+  font-size: 30rpx;
+  font-weight: bold;
+}
+
+/* 媒体对象自定义内容 */
+
+.media-title {
+  color: #c0c0c0;
+  font-size: 30rpx !important;
+  font-weight: normal !important;
+}
+
+.headimg {
+  width: 100rpx !important;
+  height: 100rpx !important;
+}
+
+.center-right {
+  position: absolute;
+  right: 0;
+  top: 50%;
+  transform: translateY(-50%);
+}
+
+.label {
+  padding-right: 30rpx;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  /* color: #232E78; */
+  color: #000;
+  font-size: 30rpx;
+}
+
+.time {
+  /* color: rgb(136, 136, 136); */
+  color: #afb4cd;
+  font-size: 24rpx;
+  margin-top: 10rpx;
+}
+
+/* 列表媒体对象end */
+
+/* 弹窗按钮 */
+
+.modal-content .btn {
+  width: 384rpx;
+  height: 80rpx;
+  line-height: 80rpx;
+  color: #fff;
+  font-size: 30rpx;
+  border-radius: 50rpx;
+  margin: 30rpx auto;
+  text-align: center;
+}
+
+.modal-content .btn.active {
+  /* background: linear-gradient(to right, #e2c597, #cf9f73); *//* background: #FFAA0F; */
+  background: linear-gradient(to right, #9034f0, #3772fb);
+  color: #fff;
+  border: none;
+}
+
+.modal-content .btn.border {
+  /* border: 1rpx solid #FFAA0F;
         color: #FFAA0F; */
-        border: 1rpx solid #1392FD;
-        color: #1693FF;
-    }
-    
-    .account-wrap {
-        width: 100%;
-        margin: 10rpx 0;
-    }
-    
-    .account {
-        margin: 0 40rpx;
-        padding: 0 20rpx;
-        display: flex;
-        flex-direction: row;
-        align-items: center;
-        justify-content: space-between;
-        border-radius: 20rpx;
-        background: #F6F6F6;
-        height: 100rpx;
-        position: relative;
-    }
-    
-    .account:after {
-        content: "";
-        position: absolute;
-        display: inline-block;
-        top: -14rpx;
-        left: 60rpx;
-        width: 0rpx;
-        height: 0rpx;
-        border-style: solid;
-        border-width: 14rpx;
-        border-radius: 1rpx;
-        border-color: #F6F6F6 #F6F6F6 transparent transparent;
-        transform: rotate(-45deg);
-    }
-    
-    .account .xs-btn {
-        width: 140rpx;
-    }
-    
-    .gold-num {
-        margin-left: 20rpx;
-        color: #000;
-        font-weight: bold
-    }
+  border: 1rpx solid #1392fd;
+  color: #1693ff;
+}
+
+.account-wrap {
+  width: 100%;
+  margin: 10rpx 0;
+}
+
+.account {
+  margin: 0 40rpx;
+  padding: 0 20rpx;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-between;
+  border-radius: 20rpx;
+  background: #f6f6f6;
+  height: 100rpx;
+  position: relative;
+}
+
+.account:after {
+  content: "";
+  position: absolute;
+  display: inline-block;
+  top: -14rpx;
+  left: 60rpx;
+  width: 0rpx;
+  height: 0rpx;
+  border-style: solid;
+  border-width: 14rpx;
+  border-radius: 1rpx;
+  border-color: #f6f6f6 #f6f6f6 transparent transparent;
+  transform: rotate(-45deg);
+}
+
+.account .xs-btn {
+  width: 140rpx;
+}
+
+.gold-num {
+  margin-left: 20rpx;
+  color: #000;
+  font-weight: bold;
+}
