--- a/pages/index/index.wxml
+++ b/pages/index/index.wxml
@@ -89,9 +89,10 @@
       </swiper>
     </view>
   </scroll-view>
-  <wux-tabbar default-current="0" bindchange="onChangeTab" position="bottom">
+  <!-- bindchange="onChangeTab" -->
+  <wux-tabbar  current="{{currentTab}}" controlled bindchange="onChangeTab" position="bottom">
     <!-- <navigator> -->
-    <wux-tabbar-item title="福利">
+    <wux-tabbar-item title="福利" bindclick="toTabIndex" >
       <wux-badge slot="icon-on">
         <image class="bar-icon" src="/images/welfare.png"></image>
       </wux-badge>
@@ -100,8 +101,8 @@
       </wux-badge>
     </wux-tabbar-item>
     <!-- </navigator> -->
-    <navigator open-type='redirect' url="/pages/shopMall/shopMall">
-      <wux-tabbar-item title="书城">
+    <!-- <navigator open-type='redirect' url="/pages/shopMall/shopMall"> -->
+      <wux-tabbar-item title="书城" bindclick="toTabShopMall">
         <wux-badge slot="icon-on">
           <image class="bar-icon" src="/images/books.png"></image>
         </wux-badge>
@@ -109,28 +110,27 @@
           <image class="bar-icon" src="/images/books_active.png"></image>
         </wux-badge>
       </wux-tabbar-item>
-    </navigator>
-    <navigator open-type='redirect' url="/pages/reading/reading">
-      <wux-tabbar-item title="阅读">
-        <view slot="icon-on">
+    <!-- </navigator> -->
+    <!-- <navigator open-type='redirect' url="/pages/reading/reading"> -->
+      <wux-tabbar-item title="阅读" bindclick="toTabReading">
+        <wux-badge slot="icon-on">
           <image class="bar-icon" src="/images/read.png"></image>
-        </view>
-        <view slot="icon-off">
+        </wux-badge>
+        <wux-badge slot="icon-off">
           <image class="bar-icon" src="/images/read_active.png"></image>
-        </view>
+        </wux-badge>
       </wux-tabbar-item>
-    </navigator>
-    <navigator open-type='redirect' url="/pages/my/my">
-      <wux-tabbar-item title="我的">
-        <wux-badge dot="{{isToReceive}}" slot="icon-on">
+    <!-- </navigator> -->
+    <!-- <navigator open-type='redirect' url="/pages/my/my"> -->
+      <wux-tabbar-item title="我的" bindclick="toTabMy">
+        <wux-badge dot="{{isToReceive || !undone}}" slot="icon-on">
           <image class="bar-icon" src="/images/my.png"></image>
         </wux-badge>
-        <wux-badge dot="{{isToReceive}}" slot="icon-off">
+        <wux-badge dot="{{isToReceive || !undone}}" slot="icon-off">
           <image class="bar-icon" src="/images/my_active.png"></image>
         </wux-badge>
       </wux-tabbar-item>
-    </navigator>
-
+    <!-- </navigator> -->
   </wux-tabbar>
 </view>
 <!-- 签到面板 -->
