--- a/pages/my/my.wxml
+++ b/pages/my/my.wxml
@@ -41,7 +41,7 @@
       <wux-media thumb="https://soure.chudianad.com/static/welfare/product/thumbImg/201811161207227287.jpg" thumb-style="" title="汗牛书屋7天畅听卡" label="全场书籍免费无限听">
         <view class="time">{{VipEndTime?VipEndTime+'  到期':'已过期'}}</view>
         <view class="btn-wrap center-right" data-appid="{{item.appid}}" data-path="{{item.path}}" slot>
-          <view class="btn blue-color disabled" wx:if="{{isVip}}">已领取</view>
+          <view class="btn disabled" wx:if="{{isVip}}">已领取</view>
           <view class="btn active" wx:else bindtap="bindReceive">领取</view>
         </view>
       </wux-media>
@@ -55,7 +55,7 @@
         <view class='right'>
           <text class="a" style="color: #99B9FA;margin-right: 20rpx;">任务及书签流水</text>
           <view class="badge">
-            <wux-badge dot />
+            <wux-badge dot="{{isToReceive || !undone}}" />
           </view>
           <view class="cart"></view>
         </view>
@@ -64,27 +64,9 @@
   </view>
   <view class="menu-wrap">
     <view class="menu">
-      <!-- <view class='menu-item' bindtap="toOrderList">
-        <image class="img" src='/images/myorder-icon.png'></image>
-        <text class='menu-title'>我的书架</text>
-        <view class='right'>
-          <view class="cart"></view>
-        </view>
-      </view>
-      <view class='menu-item' bindtap='toMyCollect'>
-        <image class="img" src='/images/star-border-icon.png'></image>
-        <view class='menu-title'>
-          我的收藏
-          <text class="collectNum">({{collectNum}})</text>
-        </view>
-        <view class='right'>
-          <view class="cart"></view>
-        </view>
-      </view> -->
       <view class='menu-item'>
         <image class="img" src='/images/contact-icon.png'></image>
         <text class="menu-title">联系客服</text>
-        <!-- <text class="desc">回复“1”加交流群</text> -->
         <view class='right'>
           <view class="cart"></view>
         </view>
@@ -92,19 +74,20 @@
       </view>
     </view>
   </view>
-  <wux-tabbar default-current="3" bindchange="onChangeTab" position="bottom">
-    <navigator open-type='redirect' url="/pages/index/index">
-    <wux-tabbar-item title="福利">
-      <wux-badge slot="icon-on">
-        <image class="bar-icon" src="/images/welfare.png"></image>
-      </wux-badge>
-      <wux-badge slot="icon-off">
-        <image class="bar-icon" src="/images/welfare_active.png"></image>
-      </wux-badge>
-    </wux-tabbar-item>
-    </navigator>
-    <navigator open-type='redirect' url="/pages/shopMall/shopMall">
-      <wux-tabbar-item title="书城">
+  <!-- bindchange="onChangeTab" -->
+  <wux-tabbar current="{{currentTab}}" controlled bindchange="onChangeTab" position="bottom">
+    <!-- <navigator open-type='redirect' url="/pages/index/index"> -->
+      <wux-tabbar-item title="福利" bindclick="toTabIndex">
+        <wux-badge slot="icon-on">
+          <image class="bar-icon" src="/images/welfare.png"></image>
+        </wux-badge>
+        <wux-badge slot="icon-off">
+          <image class="bar-icon" src="/images/welfare_active.png"></image>
+        </wux-badge>
+      </wux-tabbar-item>
+    <!-- </navigator> -->
+    <!-- <navigator open-type='redirect' url="/pages/shopMall/shopMall"> -->
+      <wux-tabbar-item title="书城" bindclick="toTabShopMall">
         <wux-badge slot="icon-on">
           <image class="bar-icon" src="/images/books.png"></image>
         </wux-badge>
@@ -112,25 +95,25 @@
           <image class="bar-icon" src="/images/books_active.png"></image>
         </wux-badge>
       </wux-tabbar-item>
-    </navigator>
-    <navigator open-type='redirect' url="/pages/reading/reading">
-      <wux-tabbar-item title="阅读">
-        <view slot="icon-on">
+    <!-- </navigator> -->
+    <!-- <navigator open-type='redirect' url="/pages/reading/reading"> -->
+      <wux-tabbar-item title="阅读" bindclick="toTabReading">
+        <wux-badge slot="icon-on">
           <image class="bar-icon" src="/images/read.png"></image>
-        </view>
-        <view slot="icon-off">
+        </wux-badge>
+        <wux-badge slot="icon-off">
           <image class="bar-icon" src="/images/read_active.png"></image>
-        </view>
-      </wux-tabbar-item>
-    </navigator>
-      <wux-tabbar-item title="我的">
-        <wux-badge dot="{{isToReceive}}" slot="icon-on">
-          <image class="bar-icon" src="/images/my.png"></image>
-        </wux-badge>
-        <wux-badge dot="{{isToReceive}}" slot="icon-off">
-          <image class="bar-icon" src="/images/my_active.png"></image>
         </wux-badge>
       </wux-tabbar-item>
+    <!-- </navigator> -->
+    <wux-tabbar-item title="我的" bindclick="toTabMy">
+      <wux-badge dot="{{isToReceive || !undone}}" slot="icon-on">
+        <image class="bar-icon" src="/images/my.png"></image>
+      </wux-badge>
+      <wux-badge dot="{{isToReceive || !undone}}" slot="icon-off">
+        <image class="bar-icon" src="/images/my_active.png"></image>
+      </wux-badge>
+    </wux-tabbar-item>
   </wux-tabbar>
 </view>
 <!-- 领取会员卡 -->
