--- a/pages/shopMall/shopMall.wxml
+++ b/pages/shopMall/shopMall.wxml
@@ -95,45 +95,46 @@
     </view>
     <!-- </view> -->
   </view>
-  <wux-tabbar default-current="1" bindchange="onChangeTab" position="bottom">
-    <navigator open-type='redirect' url="/pages/index/index">
-    <wux-tabbar-item title="福利">
-      <wux-badge slot="icon-on">
-        <image class="bar-icon" src="/images/welfare.png"></image>
-      </wux-badge>
-      <wux-badge slot="icon-off">
-        <image class="bar-icon" src="/images/welfare_active.png"></image>
-      </wux-badge>
-    </wux-tabbar-item>
-    </navigator>
-      <wux-tabbar-item title="书城">
+  <!-- bindchange="onChangeTab" -->
+  <wux-tabbar current="{{currentbottomBar}}" controlled bindchange="onChangeTab" position="bottom">
+    <!-- <navigator open-type='redirect' url="/pages/index/index"> -->
+      <wux-tabbar-item title="福利" bindclick="toTabIndex">
         <wux-badge slot="icon-on">
-          <image class="bar-icon" src="/images/books.png"></image>
+          <image class="bar-icon" src="/images/welfare.png"></image>
         </wux-badge>
         <wux-badge slot="icon-off">
-          <image class="bar-icon" src="/images/books_active.png"></image>
+          <image class="bar-icon" src="/images/welfare_active.png"></image>
         </wux-badge>
       </wux-tabbar-item>
-    <navigator open-type='redirect' url="/pages/reading/reading">
-      <wux-tabbar-item title="阅读">
-        <view slot="icon-on">
+    <!-- </navigator> -->
+    <wux-tabbar-item title="书城" bindclick="toTabShopMall">
+      <wux-badge slot="icon-on">
+        <image class="bar-icon" src="/images/books.png"></image>
+      </wux-badge>
+      <wux-badge slot="icon-off">
+        <image class="bar-icon" src="/images/books_active.png"></image>
+      </wux-badge>
+    </wux-tabbar-item>
+    <!-- <navigator open-type='redirect' url="/pages/reading/reading"> -->
+      <wux-tabbar-item title="阅读" bindclick="toTabReading">
+        <wux-badge slot="icon-on">
           <image class="bar-icon" src="/images/read.png"></image>
-        </view>
-        <view slot="icon-off">
+        </wux-badge>
+        <wux-badge slot="icon-off">
           <image class="bar-icon" src="/images/read_active.png"></image>
-        </view>
+        </wux-badge>
       </wux-tabbar-item>
-    </navigator>
-    <navigator open-type='redirect' url="/pages/my/my">
-      <wux-tabbar-item title="我的">
-        <wux-badge dot="{{isToReceive}}" slot="icon-on">
+    <!-- </navigator> -->
+    <!-- <navigator open-type='redirect' url="/pages/my/my"> -->
+      <wux-tabbar-item title="我的" bindclick="toTabMy">
+        <wux-badge dot="{{isToReceive || !undone}}" slot="icon-on">
           <image class="bar-icon" src="/images/my.png"></image>
         </wux-badge>
-        <wux-badge dot="{{isToReceive}}" slot="icon-off">
+        <wux-badge dot="{{isToReceive || !undone}}" slot="icon-off">
           <image class="bar-icon" src="/images/my_active.png"></image>
         </wux-badge>
       </wux-tabbar-item>
-    </navigator>
+    <!-- </navigator> -->
   </wux-tabbar>
 </view>
 <!-- 书签不足 -->
