--- a/pages/reading/reading.wxml
+++ b/pages/reading/reading.wxml
@@ -16,7 +16,7 @@
     <view class="media-wrap" slot="body" hover-class="none" hover-stop-propagation="false">
       <button class="openbtn" wx:if='{{authLevel != 2}}' open-type="getUserInfo" bindgetuserinfo="onGotUserInfo"></button>
       <wux-media thumb="https://soure.chudianad.com/static/welfare/product/thumbImg/201811161207227287.jpg" thumb-style="" title="汗牛书屋7天畅听卡" label="全场书籍免费无限听">
-        <view class="time">{{VipEndTime?VipEndTime+'  到期':'已过期'}}</view>
+        <view class="time" wx:if="{{userVip}}">{{VipEndTime?VipEndTime+'  到期':'已过期'}}</view>
         <view class="btn-wrap center-right" slot>
           <view class="sm-btn btn disabled" wx:if="{{isVip}}">已领取</view>
           <view class="sm-btn btn active" wx:else bindtap="bindReceive">领取</view>
@@ -50,10 +50,6 @@
                   <image class='xs_icon' src="/images/share-icon.png"></image>
                 </view>
               </view>
-              <!-- <view class="share">阅读{{item[9]}}</view> -->
-              <!-- <view class='share' data-shareurl="{{item[8]}}" data-shareArtid="{{item[0]}}" catchtap="showShareBoard">
-                <image class='xs_icon' src="/images/share-icon.png"></image>
-              </view> -->
             </view>
           </view>
           <image class='item-img' src="{{item[2]}}"></image>
